--- a/app/src/components/SearchForm/SearchForm.css
+++ b/app/src/components/SearchForm/SearchForm.css
@@ -12,7 +12,7 @@
   }
   
   button[type="submit"] {
-    margin-left: 10px;
+    width: auto;
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
