--- a/app/src/components/BookDetails/BookDetails.css
+++ b/app/src/components/BookDetails/BookDetails.css
@@ -20,8 +20,8 @@
 .book-details-img img{
     margin: 0 auto;
     width: 100%;
-    height: 100%;   
-    object-fit: cover;
+    height: auto;   
+    object-fit: contain;
 }
 
 .book-details-item{
@@ -59,9 +59,13 @@
         gap: 0;
     }
     .book-details-img{
-        padding: 0 6rem 0 2rem
+        padding: 0 6rem 0 2rem;
+        max-height: none;
+    }
+    .book-details-img img{
+        height: 100%;
     }
     .book-details-info{
-        max-height: 100%;
+        max-height: none;
     }
 }
