--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -5,7 +5,7 @@
   }
   
   .custom-input {
-    border-radius: 5px;  /* Teste */
+    border-radius: 5px; 
     border: 1px solid #ccc; 
     padding: 5px; 
     align-items: center;
