--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,29 +1,64 @@
 .about{
     padding: 3rem 0
 }
-.about-content{
-    gap: 4rem;
+.about-content.grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1px;
 }
+
+.section-title{
+    margin: 1rem 1rem;
+}
+
 .about-title{
-    margin: 1rem 0;
+    margin: 1rem 5.5rem;
 }
 .about-img img{
     max-width: 500px;
 }
 .about-text p{
-    margin: 1.8rem 0;
+    margin: 1rem 1rem;
     opacity: 0.8;
 }
 
-@media screen and (min-width: 768px) {
-    .about-content{
+.social-icons img{
+    width: auto;
+    margin: 1rem 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    height: 50px;
+}
+
+.social-icons.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1px;
+  }
+
+@media screen and (max-width: 768px) {
+    .about-content.grid{
         grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1px;
     }
     .about-title{
-        margin-top: 0;
+        margin: 1rem 5.5rem 0 1rem;
     }
-    .about-img img{
-        margin-left: 0;
+    .social-icons img{
+        width: auto;
+        height: 32px;
+    }
+
+    .social-icons.grid{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .social-icons img{
+        width: auto;
+        margin: 1rem 1rem;
+        height: auto;
+    }
+  }
     
